# block_collapse

./: .gitignore  Cargo.toml  README.md  memo.txt  result.txt  result_example.txt
src/: main.rs  result.txt
src/lib/: build_model.rs  create_blocks.rs  draw_view.rs  handle_key_pressed.rs  handle_key_released.rs  mod.rs  utils.rs  utils_for_effect.rs
src/lib/draw_view_lib/: draw_effect_view.rs  draw_gameover_view.rs  draw_normal_view.rs  mod.rs
src/models/: achievement.rs  ball.rs  block.rs  effect.rs  game_config.rs  mod.rs  player.rs  ticker.rs  win_status.rs
src/models/concerns/: reflect.rs
stages/: 1.txt  2.txt
