[package]
name = "block_collapse"
version = "0.1.0"
authors = ["YoshihiroOta <yakarumuhose@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.16.0"
nannou_audio = "0.16.0"
audrey = "0.3"
rand = "0.8.4"
chrono = "0.4.19"
once_cell = "1.8.0"
